fixed aside and main size so everything is now aligned

--- a/src/components/averagesessions/averagesessions.css
+++ b/src/components/averagesessions/averagesessions.css
@@ -1,8 +1,8 @@
 .averageSessionsCss{
-    width: 250px;
-    height: 250px;
+    flex: 1;
+    height: 100%;
     background-color: #FF0000;
-    border-radius: 2%;
+    border-radius: 5px;
     overflow: hidden;
 }
 
