--- a/src/components/dailyactivity/dailyactivity.css
+++ b/src/components/dailyactivity/dailyactivity.css
@@ -2,10 +2,8 @@
     display: flex;
     flex-direction: column;
     background-color: #FBFBFB;
-    border: 1px solid red;
     width: 100%;
-    min-height : 150px;
-    margin : 77px 107px 77px 77px;
+    height: 263px;
     padding: 20px 30px;
 }
 
@@ -22,7 +20,6 @@
     height: fit-content;
     align-items: center;
     justify-content: center;
-    border: 1px solid blue;
     font-size: 14px;
     gap: 30px;
 }
@@ -31,7 +28,6 @@
     display: flex;
     align-items: center;
     gap: 8px;
-    border: 1px solid green;
 }
 
 .chartContainer{
