--- a/src/components/hexagondiagram/hexagon.css
+++ b/src/components/hexagondiagram/hexagon.css
@@ -1,6 +1,6 @@
 .hexagon{
-    width: 250px;
-    height: 250px;
+    flex: 1;
+    height: 100%;
     background-color: #282D30;
-    border-radius: 2%;
+    border-radius: 5px;
 }
