--- a/src/components/nutriments/nutriments.css
+++ b/src/components/nutriments/nutriments.css
@@ -1,22 +1,20 @@
 .nutrimentsContainer{
-    background-color: red;
-    margin-right: 50px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    height: 100%;
 }
 
 .nutrimentContainer{
     display: flex;
     flex-direction: row;
     align-items: center;
-    margin-bottom: 20px;
-    background-color: lightgrey;
-    border: 1px solid green;
+    background-color: #FBFBFB;
     width: 100%;
-    height: 100%;
-    
+    flex: 1;
 }
 
 .iconContainerKcal{
-    border: 1px solid turquoise;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -27,7 +25,6 @@
 }
 
 .iconContainerProteines{
-    border: 1px solid turquoise;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -35,11 +32,9 @@
     height: 60px;
     background-color: rgba(74, 184, 255, 0.25);
     margin-left: 16px;
-
 }
 
 .iconContainerGlucides{
-    border: 1px solid turquoise;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -47,11 +42,9 @@
     height: 60px;
     background-color: rgba(249, 206, 35, 0.25);
     margin-left: 16px;
-
 }
 
 .iconContainerLipides{
-    border: 1px solid turquoise;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -59,7 +52,6 @@
     height: 60px;
     background-color: rgba(253, 81, 129, 0.1);
     margin-left: 16px;
-
 }
 
 .bold{
@@ -69,8 +61,7 @@
 .infos{
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
-    flex-wrap: wrap;
-    border: 1px solid red;
+    margin-left: 16px;
 }
