--- a/src/components/score/score.css
+++ b/src/components/score/score.css
@@ -1,6 +1,6 @@
 .score{
-    width: 250px;
-    height: 250px;
+    flex: 1;
+    height: 100%;
     background-color: blue;
-    border-radius: 2%;
+    border-radius: 5px;
 }
