--- a/src/index.css
+++ b/src/index.css
@@ -22,25 +22,29 @@ main{
 
 .main-blocks{
   display: flex;
-  height : auto;
-  justify-content: space-between;
-  
+  flex-direction: row;
+  align-items: stretch;
+  height: auto;
+  margin: 30px 60px 77px 77px;
 }
 
 .activities-blocks{
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;  
-  width: 100%;
-  height: 100%;
+  flex-direction: column;
+  flex: 1;
 }
 
 .graphics-blocks{
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  gap: 20px;
   width: 100%;
-  margin : 0 60px 0 60px;
-  height: auto;
-  border: 1px solid red;
+  height: 100%;
+  margin-top: 50px;
+}
+
+.nutriments-blocks{
+  width: 255px;
+  margin-left: 40px;
 }
